docs: add image to camp-seed-2025.mdx
- Added image to SEED camp 2025 post.

--- a/src/data/post/camp-seed-2025.mdx
+++ b/src/data/post/camp-seed-2025.mdx
@@ -18,3 +18,4 @@ tags:
 
 ขอให้เราทุกคนเตรียมจิตใจให้พร้อม เปิดใจรับการเปลี่ยนแปลงและพระคุณของพระเจ้าในค่ายครั้งนี้ แล้วพบกันที่บ่อแสนวิลล่า พังงา ตุลาคมนี้!
 
+![SEED_CAMP2025](~/assets/images/seed-camp2025.jpeg)
