--- a/src/data/post/camp-seed-2025.mdx
+++ b/src/data/post/camp-seed-2025.mdx
@@ -1,21 +1,24 @@
 ---
 publishDate: 2024-02-23T00:00:00Z
 author: Jinny
-title:  ค่ายเมล็ดพันธุ์ประจำปี2025
-excerpt:  ค่ายเมล็ดพันธุ์ประจำปี2025 จะจัดขึ้นในเดือนตุลาคม ที่บ่อแสนวิลล่า จังหวัดพังงา
+title: ค่ายเมล็ดพันธุ์ประจำปี2025
+excerpt: ค่ายเมล็ดพันธุ์ประจำปี2025 จะจัดขึ้นในเดือนตุลาคม ที่บ่อแสนวิลล่า จังหวัดพังงา
 category: NEWS
-image: ~/assets/images/SEED_CAMP2025.png
+image: ~/assets/images/SeedCamp2025/SEED_CAMP2025.png
 tags:
-  - NEWS
+    - NEWS
 ---
 
-
-ค่ายเมล็ดพันธุ์ประจำปี2025 จะจัดขึ้นในเดือนตุลาคม ที่บ่อแสนวิลล่า จังหวัดพังงา ขอหนุนใจพี่น้องให้เตรียมตัวเก็บเงินเพื่อไปรับพระพรที่ค่ายประจำปีร่วมกัน
-
-ค่ายเมล็ดพันธุ์ประจำปี 2025 กำลังจะมาถึง! ปีนี้เราจะจัดขึ้นในเดือนตุลาคม ณ บ่อแสนวิลล่า จังหวัดพังงา ท่ามกลางบรรยากาศธรรมชาติอันเงียบสงบและร่มรื่น ซึ่งเหมาะอย่างยิ่งสำหรับการแสวงหาพระเจ้า สร้างสายสัมพันธ์ที่แน่นแฟ้นในหมู่พี่น้อง และเติมเต็มกำลังใจในชีวิตฝ่ายจิตวิญญาณ
+ค่ายเมล็ดพันธุ์ประจำปี 2025 กำลังจะมาถึง! ปีนี้เราจะจัดขึ้นใน วันที่ 23-26 เดือนตุลาคม ณ บ่อแสนวิลล่า จังหวัดพังงา ท่ามกลางบรรยากาศธรรมชาติอันเงียบสงบและร่มรื่น ซึ่งเหมาะอย่างยิ่งสำหรับการแสวงหาพระเจ้า สร้างสายสัมพันธ์ที่แน่นแฟ้นในหมู่พี่น้อง และเติมเต็มกำลังใจในชีวิตฝ่ายจิตวิญญาณ
 
 ขอเชิญชวนทุกท่านเตรียมตัวเก็บเงินและวางแผนการเดินทางล่วงหน้า เพื่อให้สามารถเข้าร่วมค่ายครั้งนี้ได้อย่างเต็มที่ อย่าพลาดโอกาสแห่งพระพรที่รออยู่ ไม่ว่าจะเป็นคำสอนที่ลึกซึ้ง กิจกรรมเสริมสร้างศรัทธา การนมัสการที่ทรงพลัง และช่วงเวลาพิเศษในการร่วมสามัคคีธรรมกับพี่น้องในความเชื่อ
 
 ขอให้เราทุกคนเตรียมจิตใจให้พร้อม เปิดใจรับการเปลี่ยนแปลงและพระคุณของพระเจ้าในค่ายครั้งนี้ แล้วพบกันที่บ่อแสนวิลล่า พังงา ตุลาคมนี้!
 
-![SEED_CAMP2025](~/assets/images/seed-camp2025.jpeg)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/seed-camp2025.jpeg)
+
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4367.JPG)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4395.JPG)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4396.JPG)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4397.JPG)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_001.jpeg)
