--- a/src/data/post/GroupCareSeed.mdx
+++ b/src/data/post/GroupCareSeed.mdx
@@ -2,7 +2,7 @@
 publishDate: 2025-03-02T00:00:00Z
 author: Army
 title: Group Care Seed
-excerpt: คริสตจักรเมล็ดพันธุ์กรุงเทพฯ มีกลุ่มแคร์เพื่อพัฒนาความสัมพันธ์กับพระเจ้าแลพี่น้องในคริสตจักร
+excerpt: คริสตจักรเมล็ดพันธุ์กรุงเทพฯ มีกลุ่มแคร์เพื่อพัฒนาความสัมพันธ์กับพระเจ้าและพี่น้องในคริสตจักร
 category: News
 image: ~/assets/images/groupCare/groupCare(1).jpeg
 tags:
