--- a/src/data/post/camp-seed-2025.mdx
+++ b/src/data/post/camp-seed-2025.mdx
@@ -9,7 +9,10 @@ tags:
     - NEWS
 ---
 
-ค่ายเมล็ดพันธุ์ประจำปี 2025 กำลังจะมาถึง! ปีนี้เราจะจัดขึ้นใน วันที่ 23-26 เดือนตุลาคม ณ บ่อแสนวิลล่า จังหวัดพังงา ท่ามกลางบรรยากาศธรรมชาติอันเงียบสงบและร่มรื่น ซึ่งเหมาะอย่างยิ่งสำหรับการแสวงหาพระเจ้า สร้างสายสัมพันธ์ที่แน่นแฟ้นในหมู่พี่น้อง และเติมเต็มกำลังใจในชีวิตฝ่ายจิตวิญญาณ
+
+ค่ายเมล็ดพันธุ์ประจำปี2025 จะจัดขึ้นในเดือนตุลาคม วันที่ 23-26 ที่บ่อแสนวิลล่า จังหวัดพังงา ขอหนุนใจพี่น้องให้เตรียมตัวเก็บเงินเพื่อไปรับพระพรที่ค่ายประจำปีร่วมกัน
+
+ค่ายเมล็ดพันธุ์ประจำปี 2025 กำลังจะมาถึง! ปีนี้เราจะจัดขึ้นในเดือนตุลาคม ณ บ่อแสนวิลล่า จังหวัดพังงา ท่ามกลางบรรยากาศธรรมชาติอันเงียบสงบและร่มรื่น ซึ่งเหมาะอย่างยิ่งสำหรับการแสวงหาพระเจ้า สร้างสายสัมพันธ์ที่แน่นแฟ้นในหมู่พี่น้อง และเติมเต็มกำลังใจในชีวิตฝ่ายจิตวิญญาณ
 
 ขอเชิญชวนทุกท่านเตรียมตัวเก็บเงินและวางแผนการเดินทางล่วงหน้า เพื่อให้สามารถเข้าร่วมค่ายครั้งนี้ได้อย่างเต็มที่ อย่าพลาดโอกาสแห่งพระพรที่รออยู่ ไม่ว่าจะเป็นคำสอนที่ลึกซึ้ง กิจกรรมเสริมสร้างศรัทธา การนมัสการที่ทรงพลัง และช่วงเวลาพิเศษในการร่วมสามัคคีธรรมกับพี่น้องในความเชื่อ
 
