docs: update group care locations
- Updated BKK Care location.
- Updated KU location.
- Updated CRRU location.

--- a/src/data/post/GroupCareSeed.mdx
+++ b/src/data/post/GroupCareSeed.mdx
@@ -26,19 +26,19 @@ SEED BKK CARE GROUP
 แคร์ มศว. ประสานมิตร
 วันพุธ
 เวลา 17:00-19:00 น.
-สถานที่ : ใต้ตึก (ข้างสนามบาสฯ)
+สถานที่ : หลังโรงอาหารสาธิตมศว.
 การเดินทาง : ใกล้อโศก และ Airport link มักกะสัน
 
 แคร์ ม.เกษตรฯ
 วันพฤหัสบดี
 เวลา 18:00-20:00 น.
-สถานที่ : ใต้ตึกศูนย์เรียนรวม (ตึก 3)
+สถานที่ : KU avanue
 การเดินทาง : ใกล้ BTS สายสีเขียวสถานี ม.เกษตรฯ
 
 แคร์ ม.ราชภัฏจันทรเกษม
 วันพฤหัสบดี
 เวลา : 18:00-20:00 น.
-สถานที่ : ร้าน Wedrink ชั้น 2 (ข้าง ม.ราชภัฏจันทรเกษม)
+สถานที่ : หน้าจันทรเกษมปาร์ค
 การเดินทาง : ใกล้ BTS สายสีเขียวรัชโยธิน สายสีเหลืองลาดพร้าว และ MRT ลาดพร้าว
 
 ![Group Care](<~/assets/images/groupCare/groupCare(2).jpeg>)
