--- a/src/data/post/camp-seed-2025.mdx
+++ b/src/data/post/camp-seed-2025.mdx
@@ -17,8 +17,13 @@ tags:
 
 ขอให้เราทุกคนเตรียมจิตใจให้พร้อม เปิดใจรับการเปลี่ยนแปลงและพระคุณของพระเจ้าในค่ายครั้งนี้ แล้วพบกันที่บ่อแสนวิลล่า พังงา ตุลาคมนี้!
 
-![SEED_CAMP2025](~/assets/images/SeedCamp2025/seed-camp2025.jpeg)
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/amazingGrace25.png)
 
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/Promo.jpeg)
+
+## ภาพบรรยากาศค่ายเมล็ดพันธุ์ประจำปี 2024 (ปีก่อน)
+
+![SEED_CAMP2025](~/assets/images/SeedCamp2025/seed-camp2025.jpeg)
 ![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4367.JPG)
 ![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4395.JPG)
 ![SEED_CAMP2025](~/assets/images/SeedCamp2025/IMG_4396.JPG)
