docs: add care group thonburi location
- Added google map location
- Added BTS station information
- Added car park information
- Added images for easier direction

--- a/src/data/post/CareGroupThonBuri.mdx
+++ b/src/data/post/CareGroupThonBuri.mdx
@@ -4,9 +4,29 @@ author: Army
 title: การเดินทางมากลุ่มแคร์ธนบุรี
 excerpt: การเดินทางมากลุ่มแคร์ธนบุรี
 category: event
-# image: ~/assets/images/GDC/main.png
+image: ~/assets/images/walkincasa/20251209_155346.jpg
 tags:
     - event
 ---
 
-will update soon
+## Google map Location
+
+https://maps.app.goo.gl/6c3T5Dm4Jf8yQS2Y8
+
+
+## BTS: ตลาดพลู ทางออกที่ 1
+
+ติด BTS  ตลาดพลู
+
+![care](~/assets/images/walkincasa/20251207_210530.jpg)
+![care](~/assets/images/walkincasa/20251207_210608.jpg)
+
+
+เดินลงมาจะเห็นสี่แยกใต้สถานีรถไฟฟ้าและมีซอยอยู่ข้างหน้า สังเกตป้ายตำรวจ เดินเข้าไป  50 เมตรจะเจอป้ายคอนโด
+![care](~/assets/images/walkincasa/20251209_155309.jpg)
+
+![care](~/assets/images/walkincasa/20251209_155346.jpg)
+
+ถ้ามีรถยนต์ส่วนตัว สามารถขับเข้ามาจอดที่คอนโดได้เลยครับแต่ต้องแจ้งรปภ.ก่อนว่าห้อง 767/97 ตึก B(ตึกในรูป) ชั้น 7 ห้อง 97
+
+![care](~/assets/images/walkincasa/20251207_121739.jpg)
