docs: add CareGroup ThonBuri time and day
- Added time and day
- To the CareGroup description

--- a/src/data/post/CareGroupThonBuri.mdx
+++ b/src/data/post/CareGroupThonBuri.mdx
@@ -9,6 +9,9 @@ tags:
     - event
 ---
 
+ทุกวันพฤหัส
+ประมาณ 18.00-21.00 น. 
+
 ## Google map Location
 
 https://maps.app.goo.gl/6c3T5Dm4Jf8yQS2Y8
